--- a/templates/index.html
+++ b/templates/index.html
@@ -5,67 +5,82 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
 
 </head>
 
 <body>
     <div style="margin: 20px 20px 20px 20px;">
-    <div>
-        <form action="{{ url_for('predict')}}" method="post">
-           <center><h2>Predict Used Car price</h2></center>
-            <br>
-            <div class="form-group">
-                <center><label for="exampleInputEmail1">Year</label></center>
-              <input id="first" name="Year" type="number" class="form-control" aria-describedby="emailHelp" placeholder="Car Year">
-            </div>
-            <br>
-            <div class="form-group">
-              <center><label>What is the Showroom Price? (<span>In lakhs</span>)</label></center>
-              <input id="second" name="Present_Price" required="required" type="number" class="form-control" placeholder="Showroom Price">
-            </div>
-            <br>
-            <div class="form-group">
-                <center><label>How Many Kilometers Drived?</label></center>
-                <input id="third" name="Kms_Driven" required="required" type="number" class="form-control" placeholder="Kilometers Driven">
-              </div>
-              <br>
-              <div class="form-group">
-                <center><label>How much owners previously had the car ( <span>0 or 1 or 3</span> ) ?</label></center>
-                <input id="fourth" name="Owner" name="Present_Price" required="required" type="number" class="form-control" placeholder="Owners count">
-              </div>
-              <br>
+        <div>
+            <form action="{{ url_for('predict')}}" method="post">
+                <center>
+                    <h2>Predict Used Car price</h2>
+                </center>
+                <br>
+                <div class="form-group">
+                    <center><label for="exampleInputEmail1">Year</label></center>
+                    <input id="first" name="Year" type="number" class="form-control" aria-describedby="emailHelp"
+                        placeholder="Car Year">
+                </div>
+                <br>
+                <div class="form-group">
+                    <center><label>What is the Showroom Price? (<span>In lakhs</span>)</label></center>
+                    <input id="second" name="Present_Price" required="required" type="number" class="form-control"
+                        placeholder="Showroom Price">
+                </div>
+                <br>
+                <div class="form-group">
+                    <center><label>How Many Kilometers Drived?</label></center>
+                    <input id="third" name="Kms_Driven" required="required" type="number" class="form-control"
+                        placeholder="Kilometers Driven">
+                </div>
+                <br>
+                <div class="form-group">
+                    <center><label>How much owners previously had the car ( <span>0 or 1 or 3</span> ) ?</label>
+                    </center>
+                    <input id="fourth" name="Owner" name="Present_Price" required="required" type="number"
+                        class="form-control" placeholder="Owners count">
+                </div>
+                <br>
+        </div>
+        <center><label>What Is the Fuel type?</label></center>
+        <select class="form-control" name="Fuel_Type_Petrol" id="fuel" required="required">
+            <option value="Petrol">Petrol</option>
+            <option value="Diesel">Diesel</option>
+            <option value="CNG">CNG</option>
+        </select>
+        <br>
+        <center><label>Are you A Dealer or Individual</label></center>
+        <select class="form-control" name="Seller_Type_Individual" id="resea" required="required">
+            <option value="Dealer">Dealer</option>
+            <option value="Individual">Individual</option>
+        </select>
+        <br>
+        <center><label>Transmission type</label></center>
+        <select class="form-control" name="Transmission_Manual" id="research" required="required">
+            <option value="Manual">Manual Car</option>
+            <option value="Automatic">Automatic Car</option>
+        </select>
+        <br><br><br>
+        <center>
+            <button id="sub" type="submit" class="btn btn-primary">Submit</button>
+        </center>
+        </form>
+
+        <br><br>
+        <h3>{{ prediction_text }}<h3>
     </div>
-              <center><label>What Is the Fuel type?</label></center>
-            <select class="form-control" name="Fuel_Type_Petrol" id="fuel" required="required">
-                <option value="Petrol">Petrol</option>
-                <option value="Diesel">Diesel</option>
-                <option value="CNG">CNG</option>
-            </select>
-            <br>
-            <center><label>Are you A Dealer or Individual</label></center>
-            <select class="form-control"  name="Seller_Type_Individual" id="resea" required="required">
-                <option value="Dealer">Dealer</option>
-                <option value="Individual">Individual</option>
-            </select>
-            <br>
-            <center><label>Transmission type</label></center>
-            <select class="form-control" name="Transmission_Manual" id="research" required="required">
-                <option value="Manual">Manual Car</option>
-                <option value="Automatic">Automatic Car</option>
-            </select>
-            <br><br><br>
-            <center>
-                <button id="sub" type="submit" class="btn btn-primary">Submit</button>
-            </center>
-          </form>
-       
-        <br><br><h3>{{ prediction_text }}<h3>
     </div>
-</div>
 </body>
 
 </html>
